# dolphin-git-overlayicon-plugin

./: .gitignore  CMakeLists.txt  README.md  dolphin-git-overlayicon-plugin.cpp  dolphin-git-overlayicon-plugin.hpp  dolphin-git-overlayicon-plugin.json
arch/: PKGBUILD
